--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="/dist/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="bg-red-500/30">
+  <body class="bg">
     <div
       class="text-center bg-red-600/80 max-w-fit justify-center items-center flex flex-col gap-2 rounded-lg mx-auto h-fit mt-20 px-10 py-8 shadow-lg overflow-hidden duration-200 hover:shadow-xl border-2;"
     >
@@ -16,9 +16,9 @@
         Blackjack
       </h1>
 
-      <p id="message-el" class="text-red-900/70 text-lg">Want to play?</p>
-      <p id="cards-el" class="text-red-900/70 text-base">Cards:</p>
-      <p id="sum-el" class="text-red-900/70 text-base">Total:</p>
+      <p id="message-el" class="txt text-lg">Want to play?</p>
+      <p id="cards-el" class="txt">Cards:</p>
+      <p id="sum-el" class="txt">Total:</p>
       <div class="flex flex-col gap-2">
         <button onclick="startGame()" class="buttons">START GAME</button>
         <button id="new-btn" onclick="newCard()" class="buttons">
