--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <p id="message-el" class="txt text-lg">Want to play?</p>
       <p id="cards-el" class="txt">Cards:</p>
       <p id="sum-el" class="txt">Total:</p>
-      <div class="flex flex-col gap-2">
+      <div class="b flex flex-col gap-2">
         <button onclick="startGame()" class="buttons">START GAME</button>
         <button id="new-btn" onclick="newCard()" class="buttons">
           NEW CARD
